gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test12228.d
version https://git-lfs.github.com/spec/v1
oid sha256:ede7626f70912d2559dac4c31f7376c63e3c46d9fdf7f2db951d5c43554fa712
size 443
